# ex4_adv_prog

./: CLI.cpp  CLI.h  CMakeLists.txt  Can.cpp  Cheb.cpp  ClassifyCmdServer.cpp  ClassifyCmdServer.h  ClassifyData.cpp  ClassifyData.h  ClassifyDataClientCommand.cpp  ClassifyDataCommand.cpp  ClassifyDataCommand.h  Client.cpp  Client.h  ClientCommand.cpp  ClientCommand.h  ClientData.cpp  ClientData.h  Command.cpp  Command.h  DataSetsHandler.cpp  DataSetsHandler.h  DefaultIO.cpp  DefaultIO.h  DisplayCmdServer.cpp  DisplayCmdServer.h  DisplayResultClientCommand.cpp  DisplayResultCommand.cpp  Distance.cpp  Distance.h  DownloadCmdServer.h  DownloadResultClientCommand.cpp  DownloadResultCommand.cpp  Euc.cpp  Knn.cpp  Knn.h  Makefile  Man.cpp  Minikovski.cpp  PrintCmd.cpp  (+27 more)
Commands/: ClassifyDataCommand.cpp  ClassifyDataCommand.h  ClientData.cpp  ClientData.h  Command.cpp  Command.h  DisplayResultCommand.cpp  DisplayResultCommand.h  DisplayResultsCommand.h  SettingCommand.cpp  SettingCommand.h  UploadCommand.cpp  UploadCommand.h
Dio's/: SocketIO.cpp  SocketIO.h  StandardIO.h
Distances/: Can.cpp  Cheb.cpp  Distance.cpp  Euc.cpp
ServerCmd/: ClassifyCmdServer.cpp  DisplayCmdServer.cpp  DownloadCmdServer.cpp  SettingCmdServer.cpp  UploadCmdServer.cpp
lastProjectFiles - Knn,DataSetHandle,Validation,Server,Client/: Client.cpp  Knn.h  Server.cpp
